--- a/01-galerie.html
+++ b/01-galerie.html
@@ -5,7 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie</title>
 </head>
+
+<style>
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.9);
+    cursor: pointer;
+    display: grid;
+    place-content: center;
+}
+
+.overlay::after {
+    content: "X";
+    color: #fff;
+    background-color: #000;
+    font-family: "sans-serif";
+    text-align: center;
+    line-height: 2rem;
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    border: 2px solid #fff;
+    border-radius: 50%;
+}
+
+.overlay > figure {
+    margin: 0;
+    padding: 1rem;
+    border: 2px solid #fff;
+}
+
+.overlay > figure > img {
+    max-width: 100%;
+    height: auto;
+}
 <body>
+    <h1>Galerie</h1>
+<p>lorem⇥</p>
+<div class="overlay">
+    <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+</div>
     
 
 </body>
