--- a/01-galerie.html
+++ b/01-galerie.html
@@ -47,11 +47,14 @@
     max-width: 100%;
     height: auto;
 }
-<body>
+
+</style>
+<body x-data="{chiot:https://picsum.photos/id/237/400/300}">
+
     <h1>Galerie</h1>
 <p>lorem⇥</p>
 <div class="overlay">
-    <figure><img src="https://picsum.photos/id/237/400/300" alt="image 237... un chiot"></figure>
+    <figure><img :src="chiot" alt="image 237... un chiot"></figure>
 </div>
     
 
