ajout d'alpine Js

--- a/01-galerie.html
+++ b/01-galerie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie</title>
+    <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
 <style>
@@ -49,7 +50,7 @@
 }
 
 </style>
-<body x-data="{chiot:https://picsum.photos/id/237/400/300}">
+<body x-data="{chiot:'https://picsum.photos/id/237/400/300'}">
 
     <h1>Galerie</h1>
 <p>lorem⇥</p>
