--- a/01-galerie.html
+++ b/01-galerie.html
@@ -50,14 +50,21 @@
 }
 
 </style>
-<body x-data="{chiot:'https://picsum.photos/id/237/400/300'}">
+<body x-data="{chiot:null}">
 
     <h1>Galerie</h1>
 <p>lorem⇥</p>
-<div class="overlay">
+<div class="overlay" 
+    x-show="chiot"
+    @click="chiot=null"
+    @keyup.escape.window="chiot=null">
     <figure><img :src="chiot" alt="image 237... un chiot"></figure>
 </div>
-    
+<img src="https://picsum.photos/id/237/400/300" alt="miniature de chiot" 
+@click="chiot = 'https://picsum.photos/id/237/400/300'">
+<img src="https://picsum.photos/id/238/400/300" alt="miniature de chiot"
+@click="chiot = 'https://picsum.photos/id/238/400/300'">
 
 </body>
 </html>
+
