--- a/01-galerie.html
+++ b/01-galerie.html
@@ -11,8 +11,8 @@
 
 body {
     font-family: "sans-serif";
-    background-color: rgb(177, 169, 169);
-    background: linear-gradient(to left, rgb(172, 169, 169), rgb(78, 70, 70));
+    background-color: rgb(221, 181, 156);
+    
 }
 
 .overlay {
@@ -58,33 +58,42 @@ body {
 .image {
     border: 2px solid #000;
     border-radius: 6%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
+.texte{
+    border: 2px solid #000;
+    padding: 1rem;
+    margin: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 
 </style>
 <body x-data="{chiot:null}">
 
     <h1>Galerie</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolore molestias suscipit culpa, distinctio aliquid doloremque recusandae odio exercitationem rem omnis similique totam non, libero consequuntur unde eligendi ea necessitatibus.</p>
+<p class="texte">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolore molestias suscipit culpa, distinctio aliquid doloremque recusandae odio exercitationem rem omnis similique totam non, libero consequuntur unde eligendi ea necessitatibus.</p>
 <div class="overlay" 
     x-show="chiot"
     @click="chiot=null"
     @keyup.escape.window="chiot=null">
     <figure><img :src="chiot" alt="image 237... un chiot"></figure>
 </div>
-
-<img class="image" src="https://picsum.photos/id/162/80/100" alt="miniature de plage" 
-@click="chiot = 'https://picsum.photos/id/162/400/300'">
-<img class="image" src="https://picsum.photos/id/211/80/100" alt="miniature de bateau"
-@click="chiot = 'https://picsum.photos/id/211/400/300'">
-<img class="image" src="https://picsum.photos/id/184/80/100" alt="Miniature de Dune de sable" 
-@click="chiot = 'https://picsum.photos/id/184/400/300'">
-<img class="image" src="https://picsum.photos/id/199/80/100" alt="miniature de plage de sable blanc"
-@click="chiot = 'https://picsum.photos/id/199/400/300'">
-<img class="image" src="https://picsum.photos/id/176/80/100" alt="miniature de Phare" 
-@click="chiot = 'https://picsum.photos/id/176/400/300'">
-<img class="image" src="https://picsum.photos/id/164/80/100" alt="Miniature de Venise"
-@click="chiot = 'https://picsum.photos/id/164/400/300'">
-
+<div class="images">
+    <img class="image" src="https://picsum.photos/id/162/80/100" alt="miniature de plage" 
+    @click="chiot = 'https://picsum.photos/id/162/400/300'">
+    <img class="image" src="https://picsum.photos/id/211/80/100" alt="miniature de bateau"
+    @click="chiot = 'https://picsum.photos/id/211/400/300'">
+    <img class="image" src="https://picsum.photos/id/184/80/100" alt="Miniature de Dune de sable" 
+    @click="chiot = 'https://picsum.photos/id/184/400/300'">
+    <img class="image" src="https://picsum.photos/id/199/80/100" alt="miniature de plage de sable blanc"
+    @click="chiot = 'https://picsum.photos/id/199/400/300'">
+    <img class="image" src="https://picsum.photos/id/176/80/100" alt="miniature de Phare" 
+    @click="chiot = 'https://picsum.photos/id/176/400/300'">
+    <img class="image" src="https://picsum.photos/id/164/80/100" alt="Miniature de Venise"
+    @click="chiot = 'https://picsum.photos/id/164/400/300'">
+</div>
 </body>
 </html>
 
