--- a/01-galerie.html
+++ b/01-galerie.html
@@ -67,12 +67,23 @@ body {
     margin: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.titre{
+    text-align: center;
+    border: 2px solid #000;
+    padding: 1rem;
+    margin: 1rem;
+    background-color: rgb(221, 181, 156);
+    color: #000;
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px #000000;
+}
 
 
 </style>
 <body x-data="{chiot:null}">
 
-    <h1>Galerie</h1>
+    <h1 class="titre">Galerie</h1>
 <p class="texte">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolore molestias suscipit culpa, distinctio aliquid doloremque recusandae odio exercitationem rem omnis similique totam non, libero consequuntur unde eligendi ea necessitatibus.</p>
 <div class="overlay" 
     x-show="chiot"
