--- a/02-json.html
+++ b/02-json.html
@@ -6,6 +6,7 @@
     <title>Json</title>
     <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
+<a href="/index.html">Retour à l'acceuil</a>
 <body>
     <h1>Json</h1>
     <ul x-data="{
